--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,2 +1,7 @@
 [build]
-target = "wasm32-wasi"
+target="wasm32-wasi"
+rustflags = ["--cfg", "wasmedge", "--cfg", "tokio_unstable"]
+
+
+[target.wasm32-wasi]
+runner = "wasmedge"
